deployment/monolith/overlays/production/deployment-deactivation-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fttx-monolith-deactivation-consumer
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: fttx-monolith-deactivation-consumer
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "256Mi"
              cpu: "500m"
