deployment/monolith/overlays/production/deployment-offering-subscription-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fttx-monolith-offering-subscription-consumer
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: fttx-monolith-offering-subscription-consumer
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "256Mi"
              cpu: "500m"
