deployment/monolith/overlays/production/deployment-pre-renewal-alert-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fttx-monolith-pre-renewal-alert-consumer
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: fttx-monolith-pre-renewal-alert-consumer
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
