deployment/monolith/overlays/production/deployment-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fttx-monolith-scheduler
spec:
  template:
    spec:
      containers:
        - name: fttx-monolith-scheduler
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
