deployment/monolith/overlays/production/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fttx-monolith-web
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: fttx-monolith-web
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
